gitops-meshappcolor/gateways-and-routes/istio-gateway-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: istio-gateway-1
    namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-gateway-1-options
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "www.doordress.us"
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "www.doordress.us"
      tls:
        mode: Terminate
        certificateRefs:
          - name: cert-doordress-us
