gitops-meshappcolor/gateways-and-routes/istio-gateway-banphomat.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: istio-gateway-banphomat
    namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-gateway-banphomat-options
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "www.banphomat.com"
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "www.banphomat.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: banphomat-com
